# brint

./: .gitignore  README.md
brint-cli/: Cargo.toml
brint-cli/src/: file_read_worker.rs  main.rs  python.rs  types.rs
brint-cli/test/: test.py
brint-py/: setup.py
brint-py/brint/: __init__.py
example/: test.py
